--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chenshuai2144/sketch-color",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider dumi dev",
     "docs:build": "dumi build",
@@ -12,6 +12,9 @@
     "test:coverage": "umi-test --coverage",
     "prepublishOnly": "npm run build"
   },
+  "files": [
+    "es"
+  ],
   "module": "es/index.js",
   "typings": "es/index.d.ts",
   "gitHooks": {
