--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "repository": "https://github.com/chenshuai2144/sketch-color",
   "dependencies": {
     "react": "^16.12.0 || ^17.0.0",
     "reactcss": "^1.2.3",
