--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chenshuai2144/sketch-color",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider dumi dev",
     "docs:build": "dumi build",
@@ -31,8 +31,10 @@
     ]
   },
   "repository": "https://github.com/chenshuai2144/sketch-color",
+  "peerDependencies": {
+    "react": "^16.12.0"
+  },
   "dependencies": {
-    "react": "^16.12.0 || ^17.0.0",
     "reactcss": "^1.2.3",
     "tinycolor2": "^1.4.2"
   },
