--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": "https://github.com/chenshuai2144/sketch-color",
   "peerDependencies": {
-    "react": "^16.12.0"
+    "react": ">=16.12.0"
   },
   "dependencies": {
     "reactcss": "^1.2.3",
