add MIT license to package.json field for npmjs.com & other tools that validate this field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chenshuai2144/sketch-color",
   "version": "1.0.7",
+  "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider dumi dev",
     "docs:build": "dumi build",
