--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chenshuai2144/sketch-color",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider dumi dev",
@@ -15,7 +15,8 @@
   },
   "files": [
     "es",
-    "lib"
+    "lib",
+    "LICENSE"
   ],
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -44,6 +45,8 @@
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.180",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/reactcss": "^1.2.6",
     "@types/tinycolor2": "^1.4.3",
     "@umijs/fabric": "^2.8.1",
@@ -54,6 +57,8 @@
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yorkie": "^2.0.0"
   }
 }
